--- a/package.json
+++ b/package.json
@@ -14,9 +14,5 @@
     "turbo": "latest"
   },
   "name": "kitchensink",
-  "packageManager": "npm@9.6.7",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  "packageManager": "pnpm@7.15.0"
 }
